[package]
name = "madworld_server"
version = "0.1.1"
authors = ["daMaex <damaex@live.de>"]

[dependencies]
ws = "*"
clap = "*"
env_logger = "*"
rustc-serialize = "*"

[target.'cfg(any(unix, macos))'.dependencies.mysql]
version = "*"
default-features = false
features = ["socket"]

[target.'cfg(windows)'.dependencies.mysql]
version = "*"
default-features = false
features = ["pipe"]

[features]
default = []
ssl = []